# rogue.ai-secops

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  BRANDING.md  CLI_FEATURES.md  CONTRIBUTING.md  DEVOPS_FEATURES.md  LICENSE  PHASE_0_COMPLETE.md  PLAYBOOK.md  QUICKSTART.md  QUICK_DEVOPS_REFERENCE.md  README.md  ROADMAP.md  SECURITY.md  START_MODES.md  TESTING_QUICK_REFERENCE.md  TEST_CHECKLIST.md  bunfig.toml  devops.md  docker-compose.temporal.yml  main.py  package.json  phases.md  pyproject.toml  start.ps1  start.sh  tester.md  tsconfig.json  turbo.json  verify_agents.ts
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: bun.yml  ci-typescript.yml  ci.yml  release.yml  rouge-agent.yml  test-web.yml  tests.yml
assets/: WELCOME_MESSAGE.md  WELCOME_MESSAGE_ENHANCED.md  ascii-art-enhanced.txt  icon-set.md  logo-ascii.txt  pixel-art-robin.txt
docs/: API_REFERENCE.md  ARCHITECTURE.md  CHAT_MODE.md  CLEANUP_SUMMARY.md  CLI_AND_WEB_COMPLETE.md  COMPLETE_IMPLEMENTATION.md  COMPLETE_ROADMAP.md  DOCUMENTATION_COMPLETE.md  FOLDER_STRUCTURE_COMPLETE.md  GITHUB_WORKFLOWS.md  GITHUB_WORKFLOWS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTERACTIVE_MODE.md  PHASE_1_COMPLETE.md  PHASE_1_RUNNING_GUIDE.md  PHASE_2_PLAN.md  PHASE_3_PLAN.md  PROJECT_CLEANUP.md  PROMPTS_SKILLS_ABILITIES_SUMMARY.md  QUICKSTART.md  RESTRUCTURE_STATUS.md  SETUP.md  SKILLS.md  SKILLS_AND_ABILITIES.md  TESTING.md  TESTING_INTERACTIVE_MODE.md  TEST_GUIDE.md  UI_EXAMPLES.md  WORKER_SETUP.md  advanced-setup.md  cli-commands.md  compliance-security.md  component-specs.md  development-guide.md  implementation-checklist.md  litellm-setup.md  non-technical-setup.md  plan.md  quick-start-mac-linux.md  quick-start-windows.md
docs/phases/: phase_0.md  phase_1.md  phase_2.md  phase_3.md  phase_4.md  phase_5.md  phase_6.md
docs/prompts/: AGENT_PROMPTS.md  PROMPT_EXAMPLES.md
examples/: README.md  sample_api_test.py  sample_cicd_pipeline.yml  sample_infrastructure.tf  sample_test_suite.py
niro-ai/: BRANDING.md  CONTRIBUTING.md  DEVOPS_FEATURES.md  FINAL_REBRANDING_STATUS.md  PLAYBOOK.md  QUICK_DEVOPS_REFERENCE.md  README.md  REBRANDING_COMPLETE.md  REBRANDING_SUMMARY.md  START_HERE.md  TRANSFORMATION_SUMMARY.md  TYPESCRIPT_UPDATES_COMPLETE.md  package.json
niro-ai/assets/: WELCOME_MESSAGE.md  WELCOME_MESSAGE_ENHANCED.md  ascii-art-enhanced.txt  logo-ascii.txt  pixel-art-robin.txt
niro-ai/src/: setup.ts
prompts/devops/: artifact-management.md  chaos-engineering.md  chaos-engineering.txt  compliance.md  compliance.txt  config-management.md  config-management.txt  containerization.md  containerization.txt  dashboards.md  dashboards.txt  deployment-strategies.md  deployment-strategies.txt  iac-design.md  iac-design.txt  incident-response.md  incident-response.txt  kubernetes.md  kubernetes.txt  logging.md  logging.txt  monitoring.md  monitoring.txt  pipeline-design.md  pipeline-design.txt  (+4 more)
scripts/: build.ts  dev.ts  grpc-cli.ts  migrate_agents.ts  migrate_skills.ts  no-telemetry-plugin.ts  provider-recommend.ts  start-cli.ts  start-grpc.ts  start-web.ts  start.ts  system-check.ts  verify_skills.ts
src/: commands.ts  main.tsx  query.ts
tests/: README.md  conftest.py  test_activities.py  test_agent_logic.py  test_chat_mode.py  test_config_parser.py  test_e2e.py  test_e2e_full_automation.py  test_integration_workflows.py  test_main_integration.py  test_prompt_manager.py  test_skills.py  test_unit_agents.py  test_unit_tools.py
(+357 files in other folders)
